# repo_helper_pycharm

./: .bumpversion.cfg  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  conf.py  contributing.rst  index.rst  license.rst  requirements.txt  usage.rst
doc-source/_static/: style.css
doc-source/_templates/sidebar/: navigation.html
repo_helper_pycharm/: __init__.py  docs.py  iml_manager.py  register_schema.py
tests/: conftest.py  requirements.txt  test_docs.py  test_iml_manager.py  test_schema.py
tests/example_config/: other.xml  web-browsers.xml
tests/test_iml_manager_/: test_iml_manager.xml  test_iml_manager_False_.xml  test_iml_manager_True_.patch  test_iml_manager_True_.xml
tests/test_schema_/: test_pycharm_schema_back.xml  test_pycharm_schema_forward.xml
