[build-system]
requires = [ "setuptools>=40.6.0", "wheel>=0.34.2",]
build-backend = "setuptools.build_meta"

[project]
name = "repo_helper_pycharm"
version = "0.2.1"
description = "repo_helper extension to manage PyCharm's configuration."
readme = "README.rst"
keywords = [ "pycharm", "repo-helper",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/repo_helper_pycharm"
"Issue Tracker" = "https://github.com/repo-helper/repo_helper_pycharm/issues"
"Source Code" = "https://github.com/repo-helper/repo_helper_pycharm"
Documentation = "https://repo_helper_pycharm.readthedocs.io/en/latest"

[tool.mkrecipe]
conda-channels = [ "repo-helper",]
extras = "all"
license-key = "MIT"

[project.entry-points."repo_helper.command"]
repo_helper_pycharm = "repo_helper_pycharm:pycharm"
