[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "repo_helper_pycharm"
version = "0.3.0"
description = "repo_helper extension to manage PyCharm's configuration."
readme = "README.rst"
keywords = [ "pycharm", "repo-helper",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/repo_helper_pycharm"
"Issue Tracker" = "https://github.com/repo-helper/repo_helper_pycharm/issues"
"Source Code" = "https://github.com/repo-helper/repo_helper_pycharm"
Documentation = "https://repo_helper_pycharm.readthedocs.io/en/latest"

[tool.mkrecipe]
conda-channels = [ "repo-helper",]
extras = "all"
license-key = "MIT"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"

[project.entry-points."repo_helper.command"]
repo_helper_pycharm = "repo_helper_pycharm:pycharm"
